services/iperf3/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf3
  labels:
    app.kubernetes.io/component: server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: iperf3
      app.kubernetes.io/instance: iperf3
      app.kubernetes.io/component: server
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: iperf3
          image: alpine
          command: ["/bin/sh", "-c"]
          args: ["apk update && apk add --no-cache iperf3 && iperf3 --server --verbose"]
          ports:
            - name: test-tcp
              containerPort: 5201
              protocol: TCP
            - name: test-udp
              containerPort: 5201
              protocol: UDP
