services/iperf3/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf3
  labels:
    app.kubernetes.io/component: server
  annotations:
    coredns.io/hostname: iperf3
    # Overridden by patch
    metallb.io/loadBalancerIPs: ""
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: iperf3
    app.kubernetes.io/instance: iperf3
    app.kubernetes.io/component: server
  ports:
  - name: iperf-tcp
    port: 5201
    protocol: TCP
    targetPort: test-tcp
  - name: iperf-udp
    port: 5201
    protocol: UDP
    targetPort: test-udp
