services/iperf3/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iperf3-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: iperf3
      app.kubernetes.io/name: iperf3
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/24
      ports:
        - protocol: TCP
          port: test-tcp
        - protocol: UDP
          port: test-udp
  egress:
    # Allow UDP replies to client
    - to:
        - ipBlock:
            cidr: 192.168.0.0/24
      ports:
        - protocol: UDP
          port: 5201
    # Allow internet only for apk add
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 172.16.0.0/12
      ports:
        - protocol: TCP
          port: 443
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: coredns
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
